# OrderFlow_DevOps

./: JENKINS-DOCKER-FIX.md  README.md  deploy.sh  docker-compose.yml  jenkinsfile
genai-service/: main.py  pyproject.toml
genai-service/api/: routes.py  streaming.py
genai-service/chains/: prompt_templates.py  rag_chain.py
genai-service/config/: settings.py
genai-service/memory/: conversation_memory.py
genai-service/models/: chat_models.py
genai-service/retriever/: qdrant_retriever.py
genai-service/tests/: test_rag.py
helm/genai-service/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
helm/ingestion-service/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
helm/inventory-service/: Chart.yaml  values-dev.yaml  values-staging.yaml  values.yaml
helm/notification-service/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
helm/order-service/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
ingestion-service/: Dockerfile  main.py  pyproject.toml
ingestion-service/config/: settings.py
ingestion-service/loaders/: base_loader.py  pdf_loader.py
ingestion-service/models/: document.py
ingestion-service/pipeline/: chunker.py  embedder.py  orchestrator.py  qdrant_store.py
ingestion-service/tests/: test_pipeline.py
inventory-service/: Dockerfile
k8s/: configmap.yaml  ingress.yaml  namespace.yaml
notification-service/: Dockerfile
order-service/: Dockerfile
progetto/: jenkinsfile
terraform/: .gitingore
(+83 files in other folders)
