[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "genai-service"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "boto3==1.34.0",
    "qdrant-client==1.7.0",
    "langchain==0.1.0",
    "langchain-aws==0.1.0",
    "langchain-community==0.0.10",
    "httpx==0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.23.0",
    "moto[bedrock]==5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]